# feature-engineering-polars

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  release.yaml  unit-test.yaml
fe_polars/encoding/: __init__.py  one_hot_encoding.py  target_encoding.py
fe_polars/imputing/: __init__.py  base_imputing.py  mean_imputing.py  most_frequent.py
feature_engineering_polars/encoding/: target_encoding.py
feature_engineering_polars/imputing/: mean_imputing.py
tests/unit/: conftest.py
tests/unit/encoding/: test_one_hot_encoding.py  test_target_encoding.py
tests/unit/imputing/: test_base_imputing.py  test_mean_imputing.py
